// This is the definition of the syntax of this file so the buffer can interpret the code
syntax = "proto3";

// This option allows the creation of multiple files
option java_multiple_files = true;
// This option sets the destination folder of the service autogenerated files
option java_package = "server.services.bookingService";
// This option sets the name of the class where the service will be implemented
option java_outer_classname = "BookingServiceImpl";

// This is the name of the folder where all the autogenerated files will be
package bookingService;

// These are all the REQUEST and RESPONSE messages you need for all the public methods in the service
message CreateRequest {
  string patientId = 1;
  string doctorId = 2;
  string dateTime = 3;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string patientId = 2;
  string doctorId = 3;
  string dateTime = 4;
}

message CancelRequest {
  string id = 1;
}

message ShiftListRequest {
  string doctorId = 1;
}

message Appointment {
  string id = 1;
  string patientId = 2;
  string doctorId = 3;
  string dateTime = 4;
}

message ErrorResponse {
  string errorMessage = 1;
}

// This is the service declaration
service Booking {
  // These are the method declarations
  rpc Create (CreateRequest) returns (Appointment) {}
  rpc Get (GetRequest) returns (Appointment) {}
  rpc Update (UpdateRequest) returns (Appointment) {}
  rpc Cancel (CancelRequest) returns (Appointment) {}
  rpc ShiftList (stream ShiftListRequest) returns (stream Appointment) {}
}